CHATS_SIT/force-app/main/default/objects/T_INELIG_REASON__c.object
<CustomObject>
    <fields>
        <fullName>CDE_REASON__c</fullName>
        <label>Code reason ineligibility</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_DOC__c</fullName>
        <label>identifier document</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TXT_REASON_DESC_LONG__c</fullName>
        <label>Text reason description long</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TXT_REASON_DESC_SHORT__c</fullName>
        <label>Text reason description short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_reason_description_long_spn__c</fullName>
        <label>Text reason description long spanish</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_reason_description_short_spn__c</fullName>
        <label>Text reason description short spanish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ineligibility Reasons</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CDE_REASON__c</columns>
        <columns>TXT_REASON_DESC_SHORT__c</columns>
        <columns>Text_reason_description_short_spn__c</columns>
        <columns>TXT_REASON_DESC_LONG__c</columns>
        <columns>Text_reason_description_long_spn__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>IDN_INELIG_REASON</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ineligibility Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>