CHATS_SIT/force-app/main/default/objects/T_INELIG_REASON__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CDE_REASON__c</columns>
    <columns>TXT_REASON_DESC_SHORT__c</columns>
    <columns>Text_reason_description_short_spn__c</columns>
    <columns>TXT_REASON_DESC_LONG__c</columns>
    <columns>Text_reason_description_long_spn__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>